--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: reldna
 Type: Package
 Title: R Electrostatics of DNA 
-Version: 0.0-0
-Date: 2012-10-03
+Version: 0.0-2
+Date: 2012-11-12
 Author: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin
 Maintainer: Evgenia Temlyakova <evgenia.teml@gmail.com>
 Description: Package to calculate 1D electrostatic profile of arbitrary DNA sequence
@@ -10,3 +10,5 @@ License: GPL (>= 2)
 Copyright: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin 2012 
 Depends: seqinr
 Suggests: lattice, xtable
+Imports: car
+LazyData: true
