--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: reldna
 Type: Package
 Title: R Electrostatics of DNA 
-Version: 0.0-3
-Date: 2012-11-14
+Version: 0.0-4
+Date: 2012-11-15
 Author: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin
 Maintainer: Evgenia Temlyakova <evgenia.teml@gmail.com>
 Description: Package to calculate 1D electrostatic profile of arbitrary DNA sequence
@@ -10,5 +10,5 @@ License: GPL (>= 2)
 Copyright: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin 2012 
 Depends: seqinr
 Suggests: lattice, xtable
-Imports: car
+Imports: car, pls
 LazyData: true
