--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: reldna
 Type: Package
 Title: R Electrostatics of DNA 
-Version: 0.0-5
-Date: 2012-11-19
+Version: 0.0-6
+Date: 2012-11-21
 Author: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin
 Maintainer: Evgenia Temlyakova <evgenia.teml@gmail.com>
 Description: Package to calculate 1D electrostatic profile of arbitrary DNA sequence
 License: GPL (>= 2)
 Copyright: Anatoly Sorokin, Evgenia Temlyakova, Timur Dzhelyadin 2012 
-Depends: seqinr
+Depends: seqinr, pls
 Suggests: lattice, xtable
-Imports: car, pls
+Imports: car
 LazyData: true
